# Pair_Net

./: .gitignore  CLAUDE.md  CMakeLists.txt  partitions.csv  sdkconfig.defaults
.claude/: settings.local.json
Doc/: .gitignore快速参考.md  .gitignore说明文档.md  .gitignore配置完成总结.md  Git仓库清理报告.md  MQTT开发介绍.md  README.MD  核心驱动文件.md  设备配网流程深度分析.md  配网开发介绍.md  面试准备文档-使用指南.md  面试官可能提问的方向.md  面试问题详细解答-01-项目背景与架构.md  面试问题详细解答-02-通信协议与网络.md  面试问题详细解答-目录.md  项目面试介绍报告.md
components/captive_portal/: CMakeLists.txt  captive_portal.c  captive_portal.h
components/cc/: CMakeLists.txt
components/cc/cc/: cc_event.c  cc_http.c  cc_list.c  cc_timer.c  cc_tmr_task.c
components/cc/cc/include/: cc_err.h  cc_event.h  cc_http.h  cc_list.h  cc_log.h  cc_timer.h  cc_tmr_task.h
components/cc/port/: cc_hal_ble.c  cc_hal_kvs.c  cc_hal_network.c  cc_hal_os.c  cc_hal_ota.c  cc_hal_sys.c  cc_hal_wifi.c
components/cc/port/include/: cc_hal_ble.h  cc_hal_kvs.h  cc_hal_network.h  cc_hal_os.h  cc_hal_ota.h  cc_hal_sys.h  cc_hal_wifi.h
components/flexible_button/: CMakeLists.txt  flexible_button.c
components/http_client/: CMakeLists.txt  http_wrapper.c
components/http_client/http/: README.md  package.yaml
components/http_client/http/example/: http_example.c
components/http_client/http/include/: http_client.h
components/http_client/http/internal/: http_form_data.h  http_opts.h  http_wrappers.h
components/http_client/http/src/: http_aos_wrapper.c  http_client.c  http_formdata.c  http_method_api.c
main/: CMakeLists.txt  frame_parser.c  frame_parser.h  main.c  product.c  product.h
(+16 files in other folders)
